[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vasketid-scraper-hlo"
version = "0.0.1"
authors = [
  { name="Heini Leander Ovason", email="heini.ovason@protonmail.com" },
]
description = "Package for handling login and scraping of www.vasketid.dk"
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/heiniovason/vasketid-dk"
"Bug Tracker" = "https://github.com/heiniovason/vasketid-dk/issues"